Fri Mar  9 14:13:29 PST 2007 (adam) - Release 0.40
  Refactored the Content-Type negotiation to live in Catalyst::Request::REST. 
    (drolsky)
  Added some useful debugging. (drolsky)
  Added a View serializer/deserializer, which simply calls the correct 
    Catalyst view.  ('text/html' => [ 'View', 'TT' ]) (claco, adam)

Wed Dec  6 00:45:02 PST 2006 (adam) - Release 0.31
	Fixed a bug where we would report a blank content-type negotiation.
	Added Data::Dump as a dependency.

Tue Dec  5 13:02:08 PST 2006 (adam)
	Made the YAML::HTML view automatically append content-type=text/html on
	  the resulting URLs.

Sun Dec  3 12:24:16 PST 2006 (adam) - Release 0.30
	Updated the Makefile to support optional installation of the different
	  Serialization formats.
	Renamed some of the test cases, since the execution order doesn't
	  matter.
	Fixed things so that not having a Serialization module returns 415.
	Fixed things so that failure to Deserialize sends the proper status.
	Refactored the Plugin loading to Catalyst::Action::SerializeBase.
	Updated the Documentation.
	Added a whole raft of serializers. (JSON, all the Data::Serializer
	  supported ones, and XML::Simple)
	Added test cases.

Thu Nov 30 23:51:04 PST 2006 (adam)
	Refactored the Catalyst::Action::REST dispatch, so that the default
	  method is called before any _METHOD handlers.  In addition, moved
	  the 405 Not Implemented handler to be foo_not_implemented, instead
	  of the default sub.  (daisuke++ pointed out the inconsistency and
	  provided a patch, and I added the foo_not_implemented support)

	Added in automated OPTIONS handler, which constructs the allow
	  header for you, just like the 405 handler.  Can be overridden
	  with a normal _METHOD sub.

	Refactored Test::Rest, so that it uses closures to create the
	  very similar $test->method() subs.

	Added tests for Catalyst::Action::REST.

Thu Nov 30 17:14:51 PST 2006 (adam) - Release 0.2