@@ -1,8 +1,12 @@
+--- 
 abstract: Automated REST Method Dispatching
 author: Adam Jacob <adam@stalecoffee.org>, with lots of help from mst and jrockway
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.65
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Catalyst-Action-REST
 no_index: 
   directory: 
@@ -19,4 +23,4 @@ requires:
   URI::Find: 0
   YAML::Syck: 0.67
   perl: 5.8.1
-version: 0.40
+version: 0.41
